# vrHouse

./: .gitignore  README.md  patch.clean.diff  patch.diff  pyproject.toml
config/: default.yaml
docs/: architecture.md
examples/: sample_project.md
src/vrhouse/: __init__.py  cli.py  core.py
src/vrhouse/pipeline/: runner.py
src/vrhouse/pipeline/ai/: physics_model.py
src/vrhouse/pipeline/exporters/: vr_scene_builder.py
src/vrhouse/pipeline/importers/: multi_importer.py
src/vrhouse/pipeline/processors/: geometry_optimizer.py  material_enhancer.py
src/vrhouse/ui/: app.py
tests/: teste.vrpkg
